--- a/main.css
+++ b/main.css
@@ -63,6 +63,10 @@ body{
     flex-direction: row;
 }
 
+.autowidth{
+    width: auto;
+}
+
 .list {
     align-items: flex-start;
     width: 416px !important;
@@ -112,10 +116,10 @@ nav{
     justify-content: space-between;
 
     align-items: center; 
-    z-index: 2;
+    z-index: 9;
 }
 
-nav *{
+nav * {
     color: white;
     text-decoration: none;
 }
@@ -139,10 +143,13 @@ nav .buttongroup a:hover{
     
     background-color: var(--blue);
     border-radius: 6px !important;
-    padding: 2px 10px 2px 8px !important;
+    padding: 8px 12px 8px 8px !important;
     margin-left: 8px;
 
     border: 2px solid black;
+    color: white;
+    text-decoration: none;
+    line-height: 28px;
 }
 
 .discbutton div{
@@ -161,16 +168,29 @@ nav .buttongroup a:hover{
 /* MAIN PAGE */
 .cover {
     height: 752px;
+    justify-content: flex-start;
 }
 
 .cover h1{
-    margin-top: 380px;
+    margin: 352px auto 180px auto;
+    background-color: white;
+    line-height: 36px;
+}
+
+.cover span{
+    font-size:28px;
 }
 
 /* HOW */
 #how {
     justify-content: center;
     align-items: flex-start;
+}
+
+#how img{
+    width: 588px; 
+    transform: rotate(2deg); 
+    margin-top: -36px;
 }
 
 
@@ -234,7 +254,49 @@ nav .buttongroup a:hover{
     height: 96px;
 }
 
+
+/* CHAIN */
+
+#chain{
+    padding-bottom: 80px;
+}
+
+#chain .container .row{
+    position: absolute;
+    top: 75px;
+    left: -134px;
+
+    width: auto;
+
+    gap:29px;
+    justify-content: center;
+}
+
+#chain .card{
+    width: 124px;
+}
+
+.topcard{
+    position: absolute;
+    top: -115px;
+    left: 110px;
+    transform: rotate(-8deg);
+}
+
+#chain h1{
+    color: var(--b54);
+}
+
 /* CARD GRID */
+.edge{
+    position: absolute; 
+    top: -52px;
+
+    min-height: 72px;
+    width: 100%;
+    background-image: url(img/edge.svg);
+}
+
 .cardbase{
     background-color: black;
     color: white;
@@ -267,6 +329,19 @@ nav .buttongroup a:hover{
 
 }
 
+#tournament{
+   align-self: flex-start;
+   margin-left: 86px;
+}
+
+/* ABOUT */
+.diamonds {
+    position: absolute; 
+    min-height: 20px;
+    width: 100%;
+    background-image: url(img/diamonds.svg);
+}
+
 /* FOOTER */
 footer{
     background-color: var(--b10);
@@ -280,7 +355,7 @@ footer{
     background-position-x: center;
 }
 
-footer div:nth-child(1){
+footer .row{
     margin-bottom: 48px;
     padding: 0;
 }
