--- a/main.css
+++ b/main.css
@@ -344,6 +344,10 @@ nav .buttongroup a:hover{
     background-image: url(img/diamonds.svg);
 }
 
+#about{
+    padding: 48px 0;
+}
+
 /* FOOTER */
 footer{
     background-color: var(--b10);
