--- a/main.css
+++ b/main.css
@@ -199,37 +199,6 @@ nav .buttongroup a:hover{
     margin-top: -36px;
 }
 
-
-
-/* ABOUT */
-.profile{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.profile p:nth-child(3) {
-    font-weight: 700;
-}
-
-.profile p:nth-child(4){
-    font-weight: 400;
-    color: var(--b54);
-    font-style: oblique;
-    width: 254px;
-}
-
-.profile span{
-    font-weight: 400;
-}
-
-.profile img{
-    width: 120px;
-}
-
 .speechbubble{
     display: flex;
     flex-direction: column;
@@ -304,6 +273,7 @@ nav .buttongroup a:hover{
     min-height: 72px;
     width: 100%;
     background-image: url(img/edge.svg);
+    z-index: -1;
 }
 
 .cardbase{
@@ -346,6 +316,34 @@ nav .buttongroup a:hover{
 
 
 /* ABOUT */
+.profile{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.profile p:nth-child(3) {
+    font-weight: 700;
+}
+
+.profile p:nth-child(4){
+    font-weight: 400;
+    color: var(--b54);
+    font-style: oblique;
+    width: 254px;
+}
+
+.profile span{
+    font-weight: 400;
+}
+
+.profile img{
+    width: 120px;
+}
+
 .diamonds {
     position: absolute; 
     min-height: 20px;
