--- a/main.css
+++ b/main.css
@@ -152,6 +152,21 @@ nav .buttongroup a{
 nav .buttongroup a:hover{
     background-color: var(--b10);   
 }
+.button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    
+    background-color: black;
+    border-radius: 6px !important;
+    padding: 8px 12px !important;
+
+    border: 2px solid black;
+    color: white;
+    text-decoration: none;
+    line-height: 28px;
+}
 
 .discbutton{
     display: flex;
